Update and rename Vercel.json to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "api/**/*.php", "use": "@vercel/php" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
